--- a/spec/fixtures/vcr_cassettes/knox_without_parking.yml
+++ b/spec/fixtures/vcr_cassettes/knox_without_parking.yml
@@ -14,7 +14,7 @@ http_interactions:
   response:
     status:
       code: 200
-      message:
+      message: 
     headers:
       X-Frame-Options:
       - SAMEORIGIN
@@ -41,7 +41,7 @@ http_interactions:
     body:
       encoding: UTF-8
       string: 'null'
-    http_version:
+    http_version: 
   recorded_at: Tue, 17 Sep 2013 06:31:31 GMT
 - request:
     method: get
@@ -57,7 +57,7 @@ http_interactions:
   response:
     status:
       code: 200
-      message:
+      message: 
     headers:
       X-Frame-Options:
       - SAMEORIGIN
@@ -94,6 +94,49 @@ http_interactions:
       string: '{"name":"Westfield Knox","short_name":"Knox","code":"knox","business_unit_code":"26821","type":"aspirational","street_address":"425
         Burwood Highway","suburb":"Wantirna South","state":"VIC","postcode":"3152","country":"au","phone_number":"(03)
         9814 5000","email_address":"knox@au.westfield.com","latitude":"-37.868891","longitude":"145.237885","today_opening_time":"09:00","today_closing_time":"17:30","number_of_levels":3,"micello_community":20077,"facebook":"http://www.facebook.com/westfieldknox","twitter":"https://twitter.com/westfieldknox","google_plus":"https://plus.google.com/116705982116614986647/posts","instagram":"http://instagram.com/WestfieldKnox","pinterest":"http://pinterest.com/westfieldau","youtube":"http://www.youtube.com/westfieldfashion","retail":true,"cinema":true,"enabled":true}'
-    http_version:
+    http_version: 
   recorded_at: Tue, 22 Oct 2013 10:15:08 GMT
+- request:
+    method: get
+    uri: http://trading-hour-service.test.dbg.westfield.com/api/trading-hour/master/centre_trading_hours/range.json?centre_id=knox
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      User-Agent:
+      - Faraday v0.8.8
+      Content-Type:
+      - application/json
+  response:
+    status:
+      code: 200
+      message: 
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-XSS-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      X-UA-Compatible:
+      - chrome=1
+      Content-Type:
+      - application/json; charset=utf-8
+      ETag:
+      - '"bd6cb911438f0f3a0128abdadb38971a"'
+      Cache-Control:
+      - max-age=0, private, must-revalidate
+      X-Request-Id:
+      - 30af985f-1912-4fa2-b1c3-6e8e8af0b1e0
+      X-Runtime:
+      - '0.039003'
+      Date:
+      - Tue, 04 Feb 2014 22:45:04 GMT
+      Connection:
+      - close
+    body:
+      encoding: UTF-8
+      string: '[{"id":393,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":0,"date":"2014-02-03","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":394,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-02-04","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":395,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":2,"date":"2014-02-05","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":396,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-02-06","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":397,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":4,"date":"2014-02-07","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":398,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":5,"date":"2014-02-08","opening_time":"09:00","closing_time":"17:00","closed":false},{"id":399,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":6,"date":"2014-02-09","opening_time":"10:00","closing_time":"17:00","closed":false},{"id":393,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":0,"date":"2014-02-10","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":394,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-02-11","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":395,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":2,"date":"2014-02-12","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":396,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-02-13","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":397,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":4,"date":"2014-02-14","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":398,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":5,"date":"2014-02-15","opening_time":"09:00","closing_time":"17:00","closed":false},{"id":399,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":6,"date":"2014-02-16","opening_time":"10:00","closing_time":"17:00","closed":false},{"id":393,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":0,"date":"2014-02-17","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":394,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-02-18","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":395,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":2,"date":"2014-02-19","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":396,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-02-20","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":397,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":4,"date":"2014-02-21","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":398,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":5,"date":"2014-02-22","opening_time":"09:00","closing_time":"17:00","closed":false},{"id":399,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":6,"date":"2014-02-23","opening_time":"10:00","closing_time":"17:00","closed":false},{"id":393,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":0,"date":"2014-02-24","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":394,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-02-25","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":395,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":2,"date":"2014-02-26","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":396,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-02-27","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":397,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":4,"date":"2014-02-28","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":398,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":5,"date":"2014-03-01","opening_time":"09:00","closing_time":"17:00","closed":false},{"id":399,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":6,"date":"2014-03-02","opening_time":"10:00","closing_time":"17:00","closed":false},{"id":393,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":0,"date":"2014-03-03","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":394,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-03-04","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":395,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":2,"date":"2014-03-05","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":396,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-03-06","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":397,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":4,"date":"2014-03-07","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":398,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":5,"date":"2014-03-08","opening_time":"09:00","closing_time":"17:00","closed":false},{"id":399,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":6,"date":"2014-03-09","opening_time":"10:00","closing_time":"17:00","closed":false},{"id":393,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":0,"date":"2014-03-10","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":394,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":1,"date":"2014-03-11","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":395,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":2,"date":"2014-03-12","opening_time":"09:00","closing_time":"17:30","closed":false},{"id":396,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":3,"date":"2014-03-13","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":397,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":4,"date":"2014-03-14","opening_time":"09:00","closing_time":"21:00","closed":false},{"id":398,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":5,"date":"2014-03-15","opening_time":"09:00","closing_time":"17:00","closed":false},{"id":399,"centre_id":"knox","store_id":null,"hour_type":"standard","description":null,"day_of_week":6,"date":"2014-03-16","opening_time":"10:00","closing_time":"17:00","closed":false}]'
+    http_version: 
+  recorded_at: Tue, 04 Feb 2014 22:45:04 GMT
 recorded_with: VCR 2.6.0
